exports[`test renders correctly as item 1 1`] = `
<div
  className="coFoVp">
  <textarea
    className="kEAiXh"
    defaultValue="background: red;"
    onChange={[Function]} />
  <div
    className="iFZNxF">
    <div
      className="dxpgzB">
      1
    </div>
  </div>
</div>
`;

exports[`test renders correctly as item 2 1`] = `
<div
  className="coFoVp">
  <textarea
    className="kEAiXh"
    defaultValue="background: red;"
    onChange={[Function]} />
  <div
    className="iFZNxF">
    <div
      className="dxpgzB">
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item with auto hide 1`] = `
<div
  className="hWwHNT">
  <textarea
    className="kEAiXh"
    defaultValue=""
    onChange={[Function]} />
  <div
    className="iFZNxF">
    <div
      className="dxpgzB">
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item without auto hide 1`] = `
<div
  className="hWwHNT">
  <textarea
    className="kEAiXh"
    defaultValue=""
    onChange={[Function]} />
  <div
    className="iFZNxF">
    <div
      className="dxpgzB">
      2
    </div>
  </div>
</div>
`;
